<resources>
    <string name="app_name">Study Buddy</string>
    <string name="welcome">Welcome to\nStudy Buddy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">SIgn Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_register">User Register</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>

    <string name="err_email_exist">The email address has been registered.</string>
    <string name="err_first_name_required">The first name is required.</string>
    <string name="err_last_name_required">The last name is required.</string>
    <string name="err_email_required">The email is required.</string>
    <string name="err_password_required">The password is required.</string>
    <string name="err_invalid_confirm_password">The confirm password is invalid.</string>
    <string name="err_invalid_account">Email or Password is invalid.</string>
    <string name="my_groups">My Groups</string>
    <string name="create_new_group">Create New Group</string>
    <string name="group_name">Group Name</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="max_count_of_members">Max Count Of Members</string>
    <string name="tag">Tag</string>
    <string name="default_member_count">10</string>
    <string name="icon_group">&#xf500;</string>
    <string name="icon_calendar">&#xf073;</string>
    <string name="icon_tag">&#xf02b;</string>
    <string name="icon_clock">&#xf1da;</string>
    <string name="icon_checked">&#xf14a;</string>
    <string name="icon_unchecked">&#xf0c8;</string>
    <string name="icon_give_up">&#xf146;</string>
    <string name="icon_calendar_check">&#xf274;</string>
    <string name="icon_chat">&#xf086;</string>
    <string name="icon_file_lines">&#xf15c;</string>
    <string name="icon_session">&#xf4ad;</string>
    <string name="icon_bell">&#xf0f3;</string>
    <string name="icon_reward">&#xf091;</string>
    <string name="icon_temperature">&#xf2c8;</string>
    <string name="join_groups">Join Groups</string>
    <string name="leave_group">Leave Group</string>
    <string name="create_task">Create Task</string>
    <string name="task_name">Task Name</string>
    <string name="end_date">End Date</string>
    <string name="task_period">Task Period</string>
    <string name="check_in_method">Check-In Method</string>
    <string name="my_tasks">My Tasks</string>
    <string name="accept_the_task">Accept The Task</string>
    <string name="give_up_the_task">Give Up The Task</string>
    <string name="check_in_the_task">Check In The Task</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="celsius">&#176;C</string>
</resources>