<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="20dp"
    tools:context=".activities.GroupDetailActivity">

    <TextView
        android:id="@+id/txt_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="Group Detail"
        android:textAlignment="center"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/icon_group"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_member_count"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5/ 10"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/icon_calendar"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_start_date"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="20/10/2023"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/icon_tag"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_tag"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="English"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_join_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary"
        android:text="@string/join_groups"/>
    <Button
        android:id="@+id/btn_create_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary"
        android:text="@string/create_task"/>
    <Button
        android:id="@+id/btn_leave_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/danger"
        android:text="@string/leave_group"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:text="@string/cancel" />
</LinearLayout>