<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.TaskDetailActivity">

    <TextView
        android:id="@+id/txt_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Task Detail"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="Task Detail"
        android:textAlignment="center"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/icon_clock"
            android:textAlignment="center"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:textSize="16sp"
            android:text="Period: "/>
        <TextView
            android:id="@+id/txt_task_period"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5/ 10"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/icon_calendar"
            android:textAlignment="center"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:textSize="16sp"
            android:text="Task Date: "/>
        <TextView
            android:id="@+id/txt_date_range"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="20/10/2023"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:fontFamily="@font/fa_regular_400"
            android:text="@string/icon_calendar_check"
            android:textAlignment="center"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:textSize="16sp"
            android:text="Check-In: "/>
        <TextView
            android:id="@+id/txt_check_in_method"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Photo"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_status_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:fontFamily="@font/fa_regular_400"
            android:text="@string/icon_checked"
            android:textAlignment="center"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:textSize="16sp"
            android:text="Status: "/>
        <TextView
            android:id="@+id/txt_status"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Accepted"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_check_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/primary"
        android:text="@string/check_in_the_task"/>
    <Button
        android:id="@+id/btn_accept_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/primary"
        android:text="@string/accept_the_task"/>
    <Button
        android:id="@+id/btn_give_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/danger"
        android:text="@string/give_up_the_task"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:text="@string/cancel" />
</LinearLayout>