<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/light_gray"
    app:cardCornerRadius="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_group_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/group_name"/>
            <TextView
                android:id="@+id/txt_identify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingHorizontal="5dp"
                android:text="Owner"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/description"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:fontFamily="@font/fa_solid_900"
                android:text="@string/icon_group"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txt_member_count"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="5/ 10"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:fontFamily="@font/fa_solid_900"
                android:text="@string/icon_calendar"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txt_start_date"
                android:layout_width="0sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="20/10/2023"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:fontFamily="@font/fa_solid_900"
                android:text="@string/icon_tag"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txt_tag"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="English"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>